# finite_difference_options

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  QWEN.md  README.md  REFACTOR_SUMMARY.md  debug_test.py  generate_readme_image.py  main.py  main_heat.py  main_log.py  main_log_2.py  main_log_3.py  mypy.ini  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.txt  streamlit_app.py  test_comprehensive_refactored_structure.py  test_greeks_refactor.py  test_payoff_refactor.py  test_refactored_structure.py  test_solver_refactor.py
.agent_workspace/: CURRENT_STATUS.md  README.md  ai_protocol.py  demo.py  session_summary.md
.devcontainer/: devcontainer.json
.gemini/: COMMANDS.md  GEMINI.md
.gemini_project/: INSTRUCTIONS.md  project_tasks.sqlite  refactoring_plan.md  refactoring_summary.md
api/: main.py
apps/: streamlit_app.py
cli/: main.py
config/: CONFIG.py
docs/: AI_MAINTENANCE.md  ARCHITECTURE.md  ARCHITECTURE.yaml  BENCHMARK_REGISTRY.md  CANONICAL_IMPLEMENTATION_INVENTORY.md  CAPABILITY_MATRIX.md  CI_POLICY.md  FORMULA_BUNDLE.md  PRD.md  PROJECT_CONTEXT.md  TEMPLATE_CONFIG.md  architecture_contract.toml  regulatory.md
examples/: heston_demo.py
nextjs-client/: eslint.config.js  package.json
scripts/: check_ai_hierarchy_policy.py  check_architecture_contract.py  check_markdown_links.py  check_portfolio_architecture.py  export_arxiv_lab_black_scholes_fixture.py  export_pinares_fixed_price_proxy_fixture.py  generate_readme_validation_visuals.py  init_facade_checks.py  run_greek_derivative_validation.py  selftest_ai_hierarchy_policy.py  test_ai_hierarchy_policy.py  validate_ai_triage_output.py  workflow_policy_checks.py  write_release_manifest.py
src/: __init__.py  analytical_european_options.py  boundary_conditions.py  general.py  greeks.py  instruments.py  market.py  models.py  multidimensional_boundary_conditions.py  multidimensional_pricing_engine.py  multidimensional_processes.py  multidimensional_solver.py  option_pricer.py  options.py  pde_pricer.py  pde_solver.py  plotter.py  pricing_engine.py  spatial_operator.py  time_steppers.py  unified_processes_deprecated.py  utils.py  utils_log.py
tests/: conftest.py  test_adi_solver_operator_split.py  test_ai_triage_validator.py  test_american_lcp.py  test_api_deployment_hardening.py  test_api_interpolation_diagnostics.py  test_api_request_guards.py  test_api_resource_controls.py  test_api_route_validation.py  test_api_schema_contracts.py  test_benchmark_registry.py  test_boundary_conditions.py  test_callable_bond.py  test_compiled_pde_adapter.py  test_derivative_validation_gates.py  test_docstring_smoke.py  test_documentation_capabilities.py  test_factor_role_payoff_compatibility.py  test_fd_backend_capabilities.py  test_fd_black_scholes_parity_fixture.py  test_finite_difference_greeks.py  test_formula_bundle.py  test_greeks.py  test_grid_contracts.py  test_haircut_backend_adapter.py  test_interfaces.py  (+24 more)
(+193 files in other folders)
